--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,11 @@
 ---
-
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Antonio Traversa </title>
-	</head>
-	<body>
-		<h1>Antonio Traversa</h1>
-	</body>
-</html>
+<BaseLayout title="Antonio Traversa">
+  <Fragment slot="header"><Header /></Fragment>
+
+  <Fragment slot="footer"><Footer /></Fragment>
+</BaseLayout>
