test change in index page

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{title ? `${title} | Antonio Traversa` : 'Antonio Traversa'}</title>
+    <title>{title ? `${title} | Profile` : 'Antonio Traversa | Profile'}</title>
   </head>
   <body class="bg-dark-animated bg-gray-900 text-gray-100 font-sans">
     <slot name="header" />
