--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,17 +2,21 @@
 import '../styles/global.css';
 const { title } = Astro.props;
 ---
+
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{title ? `${title} | Profile` : 'Antonio Traversa | Profile'}</title>
   </head>
-  <body class="bg-dark-animated bg-gray-900 text-gray-100 font-sans">
+
+  <body class="bg-split text-gray-100 font-sans">
     <slot name="header" />
+
     <main class="min-h-screen">
       <slot />
     </main>
+
     <slot name="footer" />
   </body>
 </html>
