deploy portfolio site

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
   <div class="container-max flex flex-col items-start">
     <!-- Immagine del profilo -->
     <img 
-      src="travy333/assets/pp.jpg" 
+      src="travy333/public/assets/pp.jpg" 
       alt="Antonio Traversa" 
       class="w-40 h-40 rounded-full border-4 border-primary mb-6 object-cover animate-fadeIn"
     />
