--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,12 @@ import Stats from "../components/Stats.astro";
 
   <div class="flex flex-col md:flex-row min-h-screen p-8 gap-8">
 
-    <!-- Colonna sinistra: Hero + About + Profilo -->
+    <!-- Colonna sinistra: Hero + About  -->
     <div class="flex flex-col items-start gap-4 md:w-1/5">
       <Hero />
       <div class="w-full line-animated my-4"></div>
       <About />
-      <!-- Profilo se vuoi -->
+
     </div>
 
     <!-- Linea verticale -->
