--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -13,7 +13,7 @@ import ProjectCard from "./ProjectCard.astro";
       <ProjectCard
         title="TravyPlay"
         description="Media center in Flutter per gestire musica, video, IPTV e libri"
-        repo="https://travy333.github.io/TravyPlay_LandingPage/"
+        repo="https://travy333.github.io/travy333/travyplay/"
       />
       <ProjectCard
         title="TravyTrip"
