--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<section class="text-left  bg-transparent">
+<section id="hero" class="text-left  bg-transparent">
   <div class="container-max flex flex-col items-start">
     <!-- Immagine del profilo -->
     <img 
