project pages updated

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -18,27 +18,27 @@ import ProjectCard from "./ProjectCard.astro";
       <ProjectCard
         title="TravyTrip"
         description="Un innovativo social network basato sui viaggi."
-        repo="https://travy333.github.io/TravyPlay_LandingPage/"
+        repo="https://travy333.github.io/travy333/travytrip/"
       />
       <ProjectCard
         title="Inventory System"
         description="Sistema di inventario riutilizzabile, compatibile con Unreal Engine 5."
-        repo="https://travy333.github.io/TravyPlay_LandingPage/"
+        repo="https://travy333.github.io/travy333/inventorysystem/"
       />
       <ProjectCard
         title="Weapon System"
         description="Classi per definire armi e munizioni, meccaniche di sparo, ricarica e  tanto altro. Compatibile con Unreal Engine 5."
-        repo="https://travy333.github.io/TravyPlay_LandingPage/"
+        repo="https://travy333.github.io/travy333/weaponsystem/"
       />
       <ProjectCard
         title="Advanced Metahuman Player"
         description="Standard player riutilizzabile che utilizza Metahumans super fedeli, ottimizzati per il gaming."
-        repo="https://travy333.github.io/TravyPlay_LandingPage/"
+        repo="https://travy333.github.io/travy333/advancedmetahumanplayer/"
       />
       <ProjectCard
         title="True Weather System"
         description="Simulazione realistica del ciclo giorno-notte e delle condizioni atmosferiche in Unreal Engine, con gestione di tempo reale o scalabile e calendario completo giorno/mese/anno."
-        repo="https://travy333.github.io/TravyPlay_LandingPage/"
+        repo="https://travy333.github.io/travy333/trueweathersystem/"
       />
     </div>
   </div>
