fix inventory system page

--- a/src/pages/inventorysystem/index.astro
+++ b/src/pages/inventorysystem/index.astro
@@ -6,7 +6,7 @@ import ProjectPage from "../../components/ProjectPage.astro";
 
 
 const projectData = {
-  title: "Inventory Systeme",
+  title: "Inventory System",
   description: "Sistema di inventario riutilizzabile, compatibile con Unreal Engine 5.",
   imageUrl: "/assets/travyplay-screenshot.jpg", // Assicurati che questa immagine sia in /public/assets/
   tags: ["UE5","C++"]
