--- a/src/pages/travyplay/index.astro
+++ b/src/pages/travyplay/index.astro
@@ -8,7 +8,7 @@ import ProjectPage from "../../components/ProjectPage.astro";
 const projectData = {
   title: "TravyPlay",
   description: "Media center in Flutter per gestire musica, video, IPTV e libri.",
-  imageUrl: "/../assets/img_main_travyplay.png", // Assicurati che questa immagine sia in /public/assets/
+  imageUrl: "/assets/img_main_travyplay.png", // Assicurati che questa immagine sia in /public/assets/
   tags: ["Dart", "Flutter", "IOS", "Android"]
 };
 ---
