--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -38,7 +38,7 @@ if (imageUrl) {
   <img 
     src={finalImageUrl}
     alt={`Screenshot del progetto ${title}`} 
-    class="w-full h-auto rounded-lg mb-8 shadow-lg" 
+    class="w-1/4 h-auto rounded-lg mb-8 shadow-lg" 
   />
 )}
 
