--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -68,17 +68,17 @@ if (imageUrl) {
       Vedi il Codice
     </a>
   )}
-</div>
 
-
-<!-- Immagine Principale (opzionale) -->
+  <!-- Immagine Principale (opzionale) -->
 {imageUrl && (
   <img 
     src={finalImageUrl}
     alt={`Screenshot del progetto ${title}`} 
-    class="w-1/12 h-auto rounded-lg mb-8 shadow-lg items-center" 
+    class="w-1/6 h-auto rounded-lg mb-8 shadow-lg " 
   />
-)}
+)}  
+</div>
+
 
 
 
