--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,9 +7,8 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{title ? `${title} | Profile` : 'Antonio Traversa | Profile'}</title>
+    <title>Antonio Traversa{title ? ` | ${title}` : ''}</title>
   </head>
-
   <body class="bg-split text-gray-100 font-sans">
     <slot name="header" />
 
