--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -32,6 +32,6 @@ const { title, description, repo } = Astro.props;
     >
       <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75L21 10.5m0 0l-3.75 3.75M21 10.5H3" />
     </svg>
-    View Repository
+    View Project
   </div>
 </a>
