--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <nav class="bg-black/60 backdrop-blur-md sticky top-0 z-50">
   <div class="container-max flex justify-between items-center p-4 md:p-6">
     <!-- Logo -->
-    <a href="https://travy333.github.io/travy333/" class="text-2xl font-bold text-primary">Profile</a>
+    <a href="https://antoniotraversa.github.io/antoniotraversa/" class="text-2xl font-bold text-primary">Profile</a>
 
     <!-- Menu Desktop -->
     <ul class="hidden md:flex gap-6 text-gray-200">
