--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -5,8 +5,8 @@
     </h2>
 
 <div>
-  <img src="https://github-readme-stats.vercel.app/api?username=travy333&show_icons=true&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF&icon_color=4CAF50" alt="Statistiche GitHub di travy333" />
+  <img src="https://github-readme-stats.vercel.app/api?username=antoniotraversa&show_icons=true&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF&icon_color=4CAF50" alt="Statistiche GitHub di antoniotraversa" />
   <br><br>
-  <img src="https://github-readme-stats.vercel.app/api/top-langs?username=travy333&layout=compact&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF" alt="Linguaggi più usati da travy333" />
+  <img src="https://github-readme-stats.vercel.app/api/top-langs?username=antoniotraversa&layout=compact&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF" alt="Linguaggi più usati da antoniotraversa" />
 </div>
 </section>
