--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,12 +11,12 @@
     <h1 class="text-5xl font-bold mb-2 text-primary animate-fadeIn">Antonio Traversa</h1>
 
     <!-- Frase in corsivo -->
-    <p class="text-gray-300 italic mb-8 text-lg max-w-2xl  animate-fadeIn delay-200">
+    <p class="text-gray-300 italic mb-8 text-lg max-w-2xl  animate-fadeIn ">
       Credo nell'eleganza della semplicità<br>
       per risolvere problemi complessi.
     </p>
     
-    <div class="flex gap-6 animate-fadeIn delay-400">
+    <div class="flex gap-6 animate-fadeIn ">
 
     <a href="https://www.cprogramming.com/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c" width="40" height="40"/></a>
     <a href="https://isocpp.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-original.svg" alt="cplusplus" width="40" height="40"/></a>
