--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -9,7 +9,7 @@ import ProjectCard from "./ProjectCard.astro";
     </h1>
 
     <!-- Griglia con distanza maggiore tra le card -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-12 gap-y-16 justify-items-start">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-12 gap-y-16 justify-items-start animate-fadeIn">
       <ProjectCard
         title="TravyPlay"
         description="Media center in Flutter per gestire musica, video, IPTV e libri"
