--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -1,4 +1,4 @@
-<section id="stats" class="w-full font-sans text-gray-100 px-28 py-12">
+<section id="stats" class="w-full font-sans text-gray-100 px-28 py-12 animate-fadeIn">
   <div class="container-max flex px-6 flex-col items-start">
     <h2 class="text-3xl font-bold text-primary animate-fadeIn mb-4">
       My GitHub Stats
