--- a/src/pages/travyplay/index.astro
+++ b/src/pages/travyplay/index.astro
@@ -4,21 +4,23 @@ import Header from "../../components/Header.astro";
 import Footer from "../../components/Footer.astro";
 import ProjectPage from "../../components/ProjectPage.astro";
 
-// Qui definisci i dati specifici per QUESTO progetto
+
 const projectData = {
   title: "TravyPlay",
   description: "Media center in Flutter per gestire musica, video, IPTV e libri.",
-
-  imagesUrls: ["assets/img_main_travyplay.png","assets/img_main_travyplay2.png","assets/img_main_travyplay3.png"], 
+  imagesUrls: ["assets/img_main_travyplay.png", "assets/img_main_travyplay2.png", "assets/img_main_travyplay3.png"], 
   tags: ["Dart", "Flutter", "IOS", "Android"]
 };
 ---
 
 <BaseLayout title={projectData.title}>
-  <Fragment slot="header"><Header /></Fragment>
+  <Fragment slot="header">
+  
+    <Header title={projectData.title} />
+  </Fragment>
 
- 
   <ProjectPage {...projectData} />
 
   <Fragment slot="footer"><Footer /></Fragment>
 </BaseLayout>
+
