--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Projects from "../components/Projects.astro";
 import Stats from "../components/Stats.astro";
 ---
 
-<BaseLayout title="Profile">
+<BaseLayout title="Portfolio">
   <Fragment slot="header"><Header /></Fragment>
 
   <div class="flex flex-col md:flex-row min-h-screen p-8 gap-8">
