--- a/src/pages/travytrip/index.astro
+++ b/src/pages/travytrip/index.astro
@@ -16,7 +16,7 @@ const projectData = {
 <BaseLayout title={projectData.title}>
   <Fragment slot="header"><Header /></Fragment>
 
-
+<Header title={projectData.title} />
   <ProjectPage {...projectData} />
 
   <Fragment slot="footer"><Footer /></Fragment>
